tests/NormalTests/paczka1/fuzzy1/40917688.err
Error in line 17: 9ZNs9 A417 44,8
Error in line 30: B3Oif A417 37,6
Error in line 6: A226 A226 96,8
